modified:   pages/tools/imagegen/loaders.js 	modified:   styles/globals.css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,15 @@ input {
   aspect-ratio: 1 / 1;
   position: relative;
 }
+
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+}
+* { 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
